@startuml
'https://plantuml.com/class-diagram

class WebApp {
    +searchFlights(): void
    +getFlightStatus(): void
}

class FlightController {
    +fetchFlightData(flightNumber: String): String
    +fetchNearbyAirports(location: String): String
}

class StrategyController {
    +setCurrentStrategy(strategy: String)
    +getCurrentStrategy(): String
}

class FlightService {
    -flightDataStrategy: IVluchtDataStrategy
    +setFlightDataStrategy(strategy: IVluchtDataStrategy)
    +fetchFlightData(flightNumber: String): String
    +fetchNearbyAirports(location: String): String
}

class StrategyService {
    -strategyConfig: StrategyConfig
    +setCurrentStrategy(strategy: String)
    +getCurrentStrategy(): String
}

interface IFlightDataStrategy {
    +getFlightData(flightNumber: String): String
    +getNearestAirport(location: String): String
}

class AeroDataBoxProvider {
    +getFlightData(flightNumber: String): String
    +getNearestAirport(location: String): String
}

class FlightRadar24Provider {
    +getFlightData(flightNumber: String): String
    +getNearestAirport(location: String): String
}

class StrategyConfig {
    -currentStrategy: String
    +setCurrentStrategy(strategy: String)
    +getCurrentStrategy(): String
}

' Relationships
WebApp --> FlightController : "Handles flight search"
WebApp --> StrategyController : "Manages strategy selection"
FlightController --> FlightService : "Requests flight data"
StrategyController --> StrategyService : "Delegates strategy handling"
FlightService o-- IFlightDataStrategy : "Uses selected strategy"
StrategyService *-- StrategyConfig : "Stores current strategy"

IFlightDataStrategy <|.. AeroDataBoxProvider : "Implements"
IFlightDataStrategy <|.. FlightRadar24Provider : "Implements"

@enduml